tests/ui/attributes/multiple-invalid.stderr
error: the `inline` attribute cannot be used on constants
  --> $DIR/multiple-invalid.rs:4:3
   |
LL | #[inline]
   |   ^^^^^^
   |
   = help: the `inline` attribute can only be applied to functions

error: the `target_feature` attribute cannot be used on constants
  --> $DIR/multiple-invalid.rs:6:3
   |
LL | #[target_feature(enable = "sse2")]
   |   ^^^^^^^^^^^^^^
   |
   = help: the `target_feature` attribute can only be applied to functions

error: aborting due to 2 previous errors

